--- a/product-service.properties
+++ b/product-service.properties
@@ -1,4 +1,6 @@
+spring.datasource.url=jdbc:mysql://localhost:3306/product-services
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.show_sql=true
 spring.sql.init.mode=always
