--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,5 +4,5 @@ spring.cloud.config.server.git.uri=https://github.com/emmy202/spring-discovery-s
 spring.cloud.config.server.git.username=
 spring.cloud.config.server.git.password=
 spring.cloud.config.server.git.clone-on-start=true
-
+#hello spring
 
